<resources>
    <string name="app_name">Nutrihabit</string>
    <string name="Bienvenido">¡Bienvenido!</string>
    <string name="Que_quieres_lograr">¿Que quieres lograr?</string>
    <string name="Ganar_masa">Ganar Masa Muscular</string>
    <string name="Perder_peso">Perder Peso</string>
    <string name="Mantener_estado_fisico">Mantener Estado Fisico</string>
    <string name="tipo_alimento">Tipo de Alimento</string>
    <string name="alimento_main_title">Alimentos</string>
    <string name="seguimiento_main_title">Seguimiento</string>
    <string name="nombre_alimento_creacion">Nombre</string>
    <string name="descripcion_alimento_creacion">Descripción</string>
    <string name="porcion_alimento_creacion">Porción</string>
    <string name="calorias_alimento_creacion">Calorías (kcal)</string>
    <string name="grasas_alimento_creacion">Grasas (g)</string>
    <string name="carbohidratos_alimento_creacion">Carbohidratos (g)</string>
    <string name="proteinas_alimento_creacion">Proteínas (g)</string>
    <string name="bt_alimento_crear">Agregar</string>
    <string name="bt_consumo_guardar">Guardar</string>
    <string name="estatura">Estatura</string>
    <string name="peso">Peso</string>
    <string name="genero">Género</string>
    <string name="crear_alimento">Crear alimento</string>
    <string name="userId">userId</string>
    <string name="defaultUserId">No existe</string>
    <string name="actividad_fisica">Nivel de actividad fisica</string>
    <string name="ingreso_datos_basicos">Ingresa algunos datos básicos</string>
    <string name="siguiente">Siguiente</string>
    <string name="guardar">Guardar</string>
    <string name="editar_title">Editar</string>
    <string name="registrar_consumo_title">Registrar consumo</string>
    <string name="advertencia_eliminar">Atención!</string>
    <string name="confirmar_eliminar">¿Está seguro que quiere eliminar este alimento?</string>
    <string name="tu_imc_es">Tu IMC es</string>
    <string name="edad">Edad</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="nav_header_title">Nutrihabit</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Cebecera de navegación</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_seguimiento">Seguimiento</string>
    <string name="menu_alimentos">Alimentos</string>
    <string name="menu_inicio_sesion">Iniciar sesión</string>
    <string name="f_home_titulo">TU DIETA ADECUADA</string>
    <string name="f_home_text_desy">Desayuno</string>
    <string name="f_home_btn_consumo">Registrar consumo del dia</string>
    <string name="f_home_text_almuerzo">Almuerzo</string>
    <string name="f_home_text_cena">Cena</string>
    <string name="f_home_text_bocadillo">Bocadillos</string>
    <string name="f_login_title">Crea una cuenta o inicia sesión para sincronizar tus datos</string>
    <string name="f_login_crear_cuenta">Crear cuenta con google</string>
    <string name="f_login_iniciar_sesion">Iniciar sesión con google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_grasas">Grasas</string>
    <string name="txt_carbo">Carbohidratos</string>
    <string name="txt_proteinas">Proteinas</string>
    <string name="datos_basicos">Datos basicos</string>
    <string name="indice_masa_corporal">Indice de masa corporal</string>
    <string name="txt_total_calorias">Total Calorias (g)</string>
    <string name="txt_d_info">¿Que alimentos tienen estos componentes?</string>
    <string name="nav_salir">Salir</string>
    <string name="peso_inferior_al_normal">Peso inferior al normal</string>
    <string name="peso_normal">Peso normal</string>
    <string name="peso_superior_al_normal">Peso superior al normal</string>
    <string name="obesidad">Obesidad</string>
    <string name="tu_condicion_es">Tu condicion es:</string>
    <string name="consumo_calorico_recomendado">"Calorías recomendadas: "</string>
    <string name="tu_objetivo">Tu objetivo:</string>
    <string name="genero_hombre">Hombre</string>
    <string name="genero_mujer">Mujer</string>
    <string name="nivel_actividad_bajo">Bajo</string>
    <string name="nivel_actividad_moderado">Moderado</string>
    <string name="nivel_actividad_alto">Alto</string>
    <string name="nivel_actividad_muy_alto">Muy alto</string>
    <string name="objetivo">Objetivo</string>
    <string name="años">años</string>

    <string name="errorLongitudMaxima">Demasiados caracteres</string>
    <string name="errorLongitudMinima">Muy pocos caracteres</string>
    <string name="errorLongitudCero">No hay caracteres</string>
    <string name="errorLongitudNumeroCero">Campo necesario</string>
</resources>