<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_home_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_perfil_foreground"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_seguimiento"
            android:icon="@drawable/ic_menu_seguimiento_foreground"
            android:title="@string/menu_seguimiento" />
        <item
            android:id="@+id/nav_alimentos"
            android:icon="@drawable/ic_menu_alimentos_foreground"
            android:title="@string/menu_alimentos" />
        <item
            android:id="@+id/nav_inicio_sesion"
            android:icon="@drawable/ic_menu_inicio_sesion_foreground"
            android:title="@string/menu_inicio_sesion" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_salir_foreground"
            android:title="@string/nav_salir"/>
    </group>

</menu>