<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuPrincipal.ui.detalleComida.DetalleCom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_detalle_com"
            android:layout_width="417dp"
            android:layout_height="262dp"
            android:src="@drawable/almuerzo"
            tools:srcCompat="@drawable/bocadillo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="167dp"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/img_grafico"
                android:layout_width="199dp"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.695"
                app:layout_constraintStart_toEndOf="@+id/txt_d_proteinas"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.47"
                app:srcCompat="@drawable/grafico_mantener" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_carbo"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.31" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_proteinas"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.493"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/txt_d_grasas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#090909"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.207"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.135"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/txt_d_carbo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#090909"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/txt_d_grasas"
                app:layout_constraintVertical_bias="0.064"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/txt_d_proteinas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#090909"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.155"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/txt_d_carbo"
                app:layout_constraintVertical_bias="0.108"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_total_calorias"
                android:textColor="#090909"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.706" />

            <TextView
                android:id="@+id/txt_d_total_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="16dp"
                android:text="TextView"
                android:textColor="#070707"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_grasas"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.135" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_d_info"
            android:textColor="#070707" />

        <Button
            android:id="@+id/btn_alim_grasas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/grasas_alimento_creacion" />

        <ListView
            android:id="@+id/list1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

        </ListView>

        <Button
            android:id="@+id/btn_alim_carbo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/carbohidratos_alimento_creacion" />

        <ListView
            android:id="@+id/list2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </ListView>

        <Button
            android:id="@+id/btn_alim_prote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/proteinas_alimento_creacion" />

        <ListView
            android:id="@+id/list3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>